--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.501.0",
-    "@aws-sdk/s3-request-presigner": "^3.501.0"
+    "@aws-sdk/s3-request-presigner": "^3.501.0",
+    "fastify": "^4.26.2"
   }
 }
