--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple project to upload a large csv to s3 and consume the file using javascript streams.",
   "main": "src/server/index.ts",
   "scripts": {
-    "dev:server": "ts-node -r tsconfig-paths/register src/index.ts",
+    "dev:server": "nodemon -r tsconfig-paths/register src/index.ts",
     "test": "npx jest --passWithNoTests --silent --noStackTrace --runInBand",
     "build": "tsc",
     "dry": "npx jscpd --config .jscpd.json",
@@ -42,6 +42,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "jscpd": "^3.5.10",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
@@ -49,6 +50,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.540.0",
     "@aws-sdk/client-s3": "^3.535.0",
     "@aws-sdk/s3-request-presigner": "^3.535.0"
   }
